--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,7 @@ h6 {
 
 .section-header h3 {
   font-size: 40px;
-  color: #283d50;
+  color: #000;
   text-align: center;
   font-weight: 800;
   position: relative;
@@ -660,9 +660,13 @@ h6 {
   background: #000;
 }
 
+#portfolio h3 {
+  color: white;
+}
+
 #portfolio #portfolio-flters {
   padding: 0;
-  margin: 5px 0 35px 0;
+  margin: 50px 0;
   list-style: none;
   text-align: center;
 }
@@ -672,20 +676,18 @@ h6 {
   margin: 15px 15px 15px 0;
   display: inline-block;
   padding: 6px 20px;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 20px;
-  color: #000;
+  color: white;
   border-radius: 50px;
   text-transform: uppercase;
-  background: #ecf5ff;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #000;
-  color: #fff;
+  border: 1px solid white;
 }
 
 #portfolio #portfolio-flters li:last-child {
@@ -757,7 +759,7 @@ h6 {
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info p {
   padding: 0;
   margin: 0;
-  color: #e2effe;
+  color: #000;
   font-weight: 500;
   font-size: 14px;
   text-transform: uppercase;
@@ -784,7 +786,7 @@ h6 {
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover,
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details:hover {
-  background: #3395ff;
+  background: #000;
 }
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover i,
@@ -793,70 +795,14 @@ h6 {
 }
 
 #portfolio .portfolio-item .portfolio-wrap:hover {
-  background: #003166;
+  background: #000;
 }
 
 #portfolio .portfolio-item .portfolio-wrap:hover .portfolio-info {
   opacity: 1;
 }
 
-/* Testimonials Section
---------------------------------*/
 
-#testimonials {
-  padding: 60px 0;
-  box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
-}
-
-#testimonials .section-header {
-  margin-bottom: 40px;
-}
-
-#testimonials .testimonial-item .testimonial-img {
-  width: 120px;
-  border-radius: 50%;
-  border: 4px solid #fff;
-  float: left;
-}
-
-#testimonials .testimonial-item h3 {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 10px 0 5px 0;
-  color: #111;
-  margin-left: 140px;
-}
-
-#testimonials .testimonial-item h4 {
-  font-size: 14px;
-  color: #999;
-  margin: 0 0 15px 0;
-  margin-left: 140px;
-}
-
-#testimonials .testimonial-item p {
-  font-style: italic;
-  margin: 0 0 15px 140px;
-}
-
-#testimonials .owl-nav,
-#testimonials .owl-dots {
-  margin-top: 5px;
-  text-align: center;
-}
-
-#testimonials .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #ddd;
-}
-
-#testimonials .owl-dot.active {
-  background-color: #000;
-}
 
 /* Team Section
 --------------------------------*/
