--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ a {
 a:hover,
 a:active,
 a:focus {
-  color: #004289;
   outline: none;
   text-decoration: none;
 }
@@ -37,12 +36,22 @@ h1,
 h2,
 h3,
 h4,
-h5,
-h6 {
+h5 {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
+}
+
+h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  margin: 0 0 10px 0;
+  padding: 0;
+}
+
+ul {
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Back to top button */
@@ -202,9 +211,39 @@ h6 {
   font-weight: 500;
 }
 
+/* Subpage Intro */
+
+#sub-intro {
+  width: 100%;
+  height: 100vh;
+}
 
 
-#intro .intro-info .btn-main{
+#sub-intro .sub-intro-info {
+  padding-top: 50px;
+}
+
+@media (max-width: 992px) {
+  #sub-intro .sub-intro-info {
+    text-align: center;
+  }
+}
+
+#sub-intro .sub-intro-info h2 {
+  margin-bottom: 20px;
+  font-size: 55px;
+  font-weight: 900;
+}
+
+#sub-intro .sub-intro-info p {
+  margin-bottom: 40px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+
+
+.btn-main{
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 600;
@@ -220,7 +259,7 @@ h6 {
   color: #000;
 }
 
-#intro .intro-info .btn-main:hover {
+.btn-main:hover {
   background: #000000;
   border-color: #000;
   color: white;
@@ -265,7 +304,7 @@ h6 {
 
 .main-nav a:hover,
 .main-nav li:hover > a {
-  color: #02721a;
+  color: #03a827;
   text-decoration: none;
 }
 
@@ -297,7 +336,7 @@ h6 {
 .main-nav .drop-down ul a {
   padding: 10px 20px;
   font-size: 13px;
-  color: #02721a;
+  color: #03a827;
 }
 
 .main-nav .drop-down ul a:hover,
@@ -468,12 +507,28 @@ h6 {
   background: #ecf5ff;
 }
 
+/* Positions Section
+--------------------------------*/
+.spread {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#positions {
+  background: #fff;
+  padding: 40px 0;
+  min-height: 100vh;
+}
+
 /* About Us Section
 --------------------------------*/
+
 
 #about {
   background: #fff;
   padding: 60px 0;
+  min-height: 100vh;
 }
 
 #about .about-container .background {
@@ -689,7 +744,7 @@ h6 {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  border: 1px solid white;
+  color: #00d32e
 }
 
 #portfolio #portfolio-flters li:last-child {
@@ -755,7 +810,7 @@ h6 {
 }
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info h4 a:hover {
-  color: #000;
+  color: #03a827;
 }
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info p {
@@ -793,7 +848,7 @@ h6 {
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover i,
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details:hover i {
-  color: #fff;
+  color: #03a827;
 }
 
 #portfolio .portfolio-item .portfolio-wrap:hover {
@@ -1271,9 +1326,6 @@ h6 {
     text-align: center;
   }
 
-  #why-us .card {
-    margin: 0;
-  }
 }
 
 @media (max-width: 768px) {
@@ -1287,28 +1339,13 @@ h6 {
     width: 100%;
   }
 
-  #intro .intro-info h2 {
+  #intro .intro-info h2, #sub-intro .sub-intro-info h2 {
     font-size: 35px;
     margin-bottom: 30px;
   }
 
   .section-header p {
     width: 100%;
-  }
-
-  #testimonials .testimonial-item {
-    text-align: center;
-  }
-
-  #testimonials .testimonial-item .testimonial-img {
-    float: none;
-    margin: auto;
-  }
-
-  #testimonials .testimonial-item h3,
-  #testimonials .testimonial-item h4,
-  #testimonials .testimonial-item p {
-    margin-left: 0;
   }
 }
 
