--- a/css/style.css
+++ b/css/style.css
@@ -873,74 +873,44 @@ ul {
 #team .member {
   text-align: center;
   margin-bottom: 20px;
-  position: relative;
-  border-radius: 50%;
-  overflow: hidden;
 }
 
 #team .member .member-info {
-  opacity: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  transition: 0.2s;
 }
 
 #team .member .member-info-content {
-  margin-top: 50px;
+  margin-top: 15px;
   transition: margin 0.2s;
 }
-
-#team .member:hover .member-info {
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 1;
-  transition: 0.4s;
+#team .member img {
+  border-radius: 50%;
 }
 
-#team .member:hover .member-info-content {
-  margin-top: 0;
-  transition: margin 0.4s;
-}
 
 #team .member h4 {
   font-weight: 700;
   margin-bottom: 2px;
   font-size: 18px;
-  color: #fff;
 }
 
 #team .member span {
   font-style: italic;
   display: block;
   font-size: 13px;
-  color: #fff;
 }
 
 #team .member .social {
-  margin-top: 15px;
+  margin-top: 5px;
 }
 
 #team .member .social a {
   transition: none;
-  color: #fff;
+  color: black;
+  transition: all .3s;
 }
 
 #team .member .social a:hover {
-  color: #000;
+  color: rgb(8, 83, 182);
 }
 
 #team .member .social i {
