--- a/css/style.css
+++ b/css/style.css
@@ -875,7 +875,7 @@ ul {
 
 #team .member {
   text-align: center;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 #team .member .member-info {
@@ -887,6 +887,7 @@ ul {
 }
 #team .member img {
   border-radius: 50%;
+  width: 80%;
 }
 
 
@@ -899,6 +900,10 @@ ul {
 #team .member span {
   font-style: italic;
   display: block;
+  font-size: 13px;
+}
+#team .member p {
+  margin: 5px 0;
   font-size: 13px;
 }
 
