--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 
 a {
   color: #004289;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 a:hover,
@@ -257,12 +257,56 @@ ul {
   background: white;
   border: 2px solid #000;
   color: #000;
+  align-items: center;
+
 }
 
+
+
 .btn-main:hover {
-  background: #000000;
+  background: #000;
   border-color: #000;
   color: white;
+}
+
+.get-started {
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 5px;
+  transition: 0.5s;
+  margin: 0 20px 20px 0;
+  color: #fff;
+  background: white;
+  border: 2px solid #000;
+  color: #000;
+  align-items: center;
+  width: 163px;
+  transition: 0.5s;
+
+}
+
+.get-started:hover {
+  background: #004289;
+  border-color: #000;
+  color: white;
+}
+
+.get-started i {
+  /* transition: all 0.3s;
+  -webkit-transition: all 0.3s; */
+  display: none;
+
+}
+.get-started:hover i {
+  display: inline;
+}
+
+.get-started:hover span{
+  display: none;
 }
 
 
@@ -736,11 +780,13 @@ ul {
 .ph-btn {
   background-color: #1DACBA;
   border: 1px solid #1DACBA;
-  color:white;
-  padding-left:  20px;
-  padding-right:  20px;
+  padding: 9px 25px;
   margin-bottom: 15px;
   font-size: medium;
+  transition: all .3s;
+  color: white;
+
+  
 
   display: flex;
   align-items: center;
@@ -748,9 +794,9 @@ ul {
 }
 
 .ph-btn:hover {
-  border: 1px solid #1DACBA;
   color: white;
-  background-color: #1DACBA;
+  background-color: rgb(43, 188, 201);
+  border: 1px solid rgb(43, 188, 201);
 }
 
 .ph-btn i {
