--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,18 @@ ul {
   display: none;
 }
 
+.collab-img {
+  width: 100%; 
+  padding: 0 5%;
+}
+
+@media (min-width: 992px) {
+  .collab-img {
+    margin-top: -50px; 
+    padding: 0 10%;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -1002,14 +1014,25 @@ ul {
   margin-top: 5px;
 }
 
-#team .member .social a {
+#team .member a {
   transition: none;
   color: black;
   transition: all .3s;
 }
 
-#team .member .social a:hover {
-  color: #03a827;
+#team .member .fa-linkedin-in{
+  transition: all .3s;
+}
+#team .member .fa-github{
+  transition: all .3s;
+}
+
+#team .member .fa-linkedin-in:hover {
+  color: #0077B5;
+}
+
+#team .member .fa-github:hover {
+  color: #4ea528;
 }
 
 #team .member .social i {
@@ -1362,11 +1385,11 @@ ul {
   }
 
   #intro .intro-info h2 {
-    padding: 0 15%;
+    padding: 0 10%;
   }
   
   #intro .intro-info p {
-    padding: 0 20%;
+    padding: 0 15%;
   }
 
 
