--- a/css/style.css
+++ b/css/style.css
@@ -873,14 +873,14 @@ ul {
 .preview-btn {
   margin-top: 20px;
   background-color: transparent;
-  color: white;
+  color: rgba(255,255,255,.9);
   border-radius: 5px;
-  border: 1px solid white;
+  border: 1px solid rgba(255,255,255,.9);
+  transition: all .3s;
 }
 .preview-btn:hover {
-  background-color: #000;
-  border: 1px solid #000;
-  color: white;
+  color: rgba(255,255,255,1);
+  border: 1px solid rgba(255,255,255,1);
 }
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info {
@@ -898,17 +898,13 @@ ul {
   transition: 0.2s linear;
 }
 
-.portfolio-info-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.portfolio-info-header span{
+.portfolio-info span{
   font-size: 22px;
   line-height: 1px;
   font-weight: 700;
+  margin-bottom: 10px;
 }
+
 
 
 #portfolio .portfolio-item .portfolio-wrap .portfolio-info h4 a {
@@ -941,29 +937,42 @@ ul {
 
 }
 
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview i,
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details i {
-  padding-top: 6px;
-  font-size: 22px;
-  color: #fff;
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover,
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details:hover {
-  transform: scale(1.1);
-}
-
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-preview:hover i,
-#portfolio .portfolio-item .portfolio-wrap .portfolio-info .link-details:hover i {
-}
 
 #portfolio .portfolio-item .portfolio-wrap:hover {
   background: #000;
+  cursor: pointer;
+
 }
 
 #portfolio .portfolio-item .portfolio-wrap:hover .portfolio-info {
   opacity: 1;
 }
+
+
+
+.modal-body {
+  padding: 0;
+  border: 2px solid white;
+  background: black;
+}
+.modal-body h4{
+  font-weight: 600;
+  padding: 0;
+  margin: 0;
+  margin-top: 15px;
+}
+.modal-body p {
+  padding: 0;
+  margin: 0;
+  margin-top: 5px;
+ 
+}
+
+.modal-dialog {
+  max-width: 70vw;
+  min-width: 70vw;
+}
+
 
 
 
