--- a/css/style.css
+++ b/css/style.css
@@ -983,14 +983,21 @@ ul {
   justify-content: space-between;
   align-items: center ;
 }
-
-.px-img {
-  padding: 0 7rem;
+.carousel-vid {
+bottom: 100px;
 }
+
+.carousel-vid span {
+  margin-top: 100px;
+}
+
 
 @media (min-width: 992px){
   .modal-dialog {
     max-width: 50vw;
+  }
+  .tele {
+    max-width: 28vw !important;
   }
   .px-img {
     padding: 0 14rem;
@@ -1444,6 +1451,10 @@ ul {
   #header {
     height: 60px;
     padding: 10px 0;
+  }
+
+  .portfolio-info {
+    display: none;
   }
 
   .mt-mobile {
