--- a/css/style.css
+++ b/css/style.css
@@ -311,8 +311,9 @@ ul {
 
 .collab-img {
   width: 100%; 
-  padding: 0 5%;
+  padding: 75 5%;
   padding-top: 75px;
+  margin-bottom: 75px;
 }
 
 @media (min-width: 992px) {
@@ -955,6 +956,7 @@ ul {
   border: 5px solid white;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.95);
+  
 }
 .modal-body p {
   padding: 0;
@@ -991,6 +993,9 @@ bottom: 100px;
   margin-top: 100px;
 }
 
+.modal-dialog {
+  margin-top:65px;
+}
 
 @media (min-width: 992px){
   .modal-dialog {
@@ -1002,6 +1007,10 @@ bottom: 100px;
   .px-img {
     padding: 0 14rem;
   }
+}
+
+.modal-backdrop{
+    opacity:0.7 !important;
 }
 
 
