--- a/css/style.css
+++ b/css/style.css
@@ -309,20 +309,35 @@ ul {
   display: none;
 }
 
-.collab-img {
-  width: 100%; 
-  padding: 75 5%;
-  padding-top: 75px;
-  margin-bottom: 25px;
+.collab {
+  margin-bottom: 100px;
 }
 
+.collab-header{
+  text-align: center;
+  /* font-weight: 600; */
+  font-size: 20px;
+  margin-bottom: 50px;
+}
+
+
+
 @media (min-width: 992px) {
-  .collab-img {
+  .collab {
     margin-top: -50px; 
-    padding: 0 10%;
     margin-bottom: 75px;
   }
+  .collab-header{
+    font-size: 25px;
+  }
 }
+
+@media (max-width: 992px) {
+  .img-pad-2 {
+    padding: 0 30px;
+  }
+}
+
 
 
 /*--------------------------------------------------------------
