--- a/css/style.css
+++ b/css/style.css
@@ -187,16 +187,21 @@ ul {
 
 #intro {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
-  /* justify-content: center; */
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  
 }
 
 
-#intro .intro-info {
+.intro-info {
   text-align: center;
   width: 100%;
+  margin-bottom: 10%;
+  padding: 0 10px;
+  
+
 }
 
 #intro .intro-info h2 {
@@ -209,6 +214,27 @@ ul {
   margin-bottom: 40px;
   font-size: 24px;
   font-weight: 500;
+}
+
+.partners {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 80px;
+
+}
+
+.partners h3 {
+  font-weight: 800;
+}
+
+@media (min-width: 992px) {
+  .partners p {
+    padding: 0 15%;
+  }
+  .partners {
+    margin-bottom: 90px;
+    margin-top: 40px;
+  }
 }
 
 /* Subpage Intro */
